# ai-esp32-cam

./: extra_script.py  platformio.ini
config-server/: package.json
data/: index.html
data/_astro/: dashboard.3-hdSHnp.css
data/dashboard/: index.html
data/login/: index.html
include/: cam.hpp  push_img.hpp  web.hpp
server/: Dockerfile  README.md  build-container.sh  docker-compose.yml  pyproject.toml  test.js
server/server/: main.py
server/static/: index.html
src/: cam.cpp  main.cpp  push_img.cpp  web.cpp
web/: astro.config.mjs  package-lock.json  package.json
web/src/components/: Alert.astro  Button.astro  Card.astro  CardTitle.astro  Center.astro  PasswordBox.astro  TextBox.astro  Title.astro
web/src/pages/: dashboard.astro  index.astro  login.astro
