[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["KrisNathan <kristophernathanael2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
pydantic = "^2.6.4"
ultralytics = "^8.1.34"
fs = "^2.4.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
